Add Horde_Template binder

--- a/package.xml
+++ b/package.xml
@@ -69,14 +69,12 @@ http://pear.php.net/dtd/package-2.0.xsd">
    <pearinstaller>
     <min>1.5.4</min>
    </pearinstaller>
-<!--
-   <package>
-    <name>Horde</name>
-    <channel>pear.horde.org</channel>
-   </package>
--->
   </required>
   <optional>
+   <package>
+    <name>Cache</name>
+    <channel>pear.horde.org</channel>
+   </package>
    <extension>
     <name>gettext</name>
    </extension>
