--- a/package.xml
+++ b/package.xml
@@ -30,7 +30,8 @@ http://pear.php.net/dtd/package-2.0.xsd">
   <api>beta</api>
  </stability>
  <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
- <notes>* Initial Horde 4 package.
+ <notes>* Remove dependency on Horde_Core.
+ * Initial Horde 4 package.
  </notes>
  <contents>
   <dir name="/">
