Update dependencies, prepare releases.

--- a/package.xml
+++ b/package.xml
@@ -16,8 +16,8 @@
   <email>slusarz@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2011-03-08</date>
- <time>23:51:04</time>
+ <date>2011-03-15</date>
+ <time>18:13:17</time>
  <version>
   <release>1.0.0beta1</release>
   <api>1.0.0</api>
@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
  <notes>
-*
+* First beta release for Horde 4.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -57,18 +57,6 @@
     <min>1.7.0</min>
    </pearinstaller>
   </required>
-  <optional>
-   <package>
-    <name>Horde_Cache</name>
-    <channel>pear.horde.org</channel>
-    <min>1.0.0beta1</min>
-    <max>2.0.0</max>
-    <exclude>2.0.0</exclude>
-   </package>
-   <extension>
-    <name>gettext</name>
-   </extension>
-  </optional>
  </dependencies>
  <phprelease>
   <filelist>
@@ -125,6 +113,21 @@ Initial release as a PEAR package
    <notes>
 * First alpha release for Horde 4.
 * Remove dependency on Horde_Core.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.0.0beta1</release>
+    <api>1.0.0</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2011-03-15</date>
+   <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
+   <notes>
+* First beta release for Horde 4.
    </notes>
   </release>
  </changelog>
