--- a/package.xml
+++ b/package.xml
@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [mms] Need to cache gettext-enabled templates with language information in the cache ID (Bug #10872).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -185,7 +185,7 @@ Initial release as a PEAR package
    <date>2011-04-06</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [mms] Need to cache gettext-enabled templates with language information in the cache ID (Bug #10872).
    </notes>
   </release>
  </changelog>
