--- a/package.xml
+++ b/package.xml
@@ -17,9 +17,9 @@
   <active>yes</active>
  </lead>
  <date>2011-12-20</date>
- <time>23:07:31</time>
+ <time>23:16:28</time>
  <version>
-  <release>1.0.1</release>
+  <release>1.0.2</release>
   <api>1.0.0</api>
  </version>
  <stability>
@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [mms] Need to cache gettext-enabled templates with language information in the cache ID (Bug #10872).
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -194,6 +194,19 @@ Initial release as a PEAR package
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
 * [mms] Need to cache gettext-enabled templates with language information in the cache ID (Bug #10872).
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.0.2</release>
+    <api>1.0.0</api></version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api></stability>
+   <date>2011-12-20</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
