--- a/package.xml
+++ b/package.xml
@@ -17,7 +17,7 @@
   <active>yes</active>
  </lead>
  <date>2012-11-19</date>
- <time>14:08:34</time>
+ <time>18:25:38</time>
  <version>
   <release>2.0.1</release>
   <api>1.0.0</api>
@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [mms] Use new Horde_Test layout.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -256,7 +256,7 @@ Initial release as a PEAR package
    <date>2012-11-19</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [mms] Use new Horde_Test layout.
    </notes>
   </release>
  </changelog>
