Standardize library full names.

--- a/doc/horde.yml
+++ b/doc/horde.yml
@@ -1,7 +1,7 @@
 ---
 id: Template
 name: Template
-full: Horde Template System
+full: Template library (deprecated)
 description: >
   Horde Template system. Adapted from bTemplate, by Brian Lozier
   <brian@massassi.net>.
