Update composer information.

--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,18 @@
         }
     ],
     "require": {
-        "php": "^5.3,<8"
+        "php": "^5.3 || ^7"
     },
     "suggest": {
         "pear-pear.horde.org/Horde_Test": "^2.1@stable"
+    },
+    "replace": {
+        "pear-pear.horde.org/Horde_Template": "2.*",
+        "pear-horde/Horde_Template": "2.*"
+    },
+    "autoload": {
+        "psr-0": {
+            "Horde_Template": "lib/"
+        }
     }
 }
