--- a/.horde.yml
+++ b/.horde.yml
@@ -7,3 +7,32 @@ description: >
   <brian@massassi.net>.
 list: dev
 type: library
+homepage: https://www.horde.org/libraries/Horde_Template
+authors:
+  -
+    name: Chuck Hagenbuch
+    user: chuck
+    email: chuck@horde.org
+    active: true
+    role: lead
+  -
+    name: Michael Slusarz
+    user: slusarz
+    email: slusarz@horde.org
+    active: true
+    role: lead
+version:
+  release: 2.0.4
+  api: 1.0.0
+state:
+  release: stable
+  api: stable
+license:
+  identifier: LGPL-2.1
+  uri: http://www.horde.org/licenses/lgpl21
+dependencies:
+  required:
+    php: ^5.3 || ^7
+  optional:
+    pear:
+      pear.horde.org/Horde_Test: ^2.1
