--- a/package.xml
+++ b/package.xml
@@ -16,7 +16,7 @@
   <email>slusarz@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2017-10-20</date>
+ <date>2017-10-27</date>
  <version>
   <release>2.0.4</release>
   <api>1.0.0</api>
@@ -30,6 +30,13 @@
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
+   <dir name="doc">
+    <dir name="Horde">
+     <dir name="Template">
+      <file name="CHANGES" role="doc" />
+     </dir> <!-- /doc/Horde/Template -->
+    </dir> <!-- /doc/Horde -->
+   </dir> <!-- /doc -->
    <dir name="lib">
     <dir name="Horde">
      <file name="Template.php" role="php" />
@@ -70,6 +77,7 @@
  </dependencies>
  <phprelease>
   <filelist>
+   <install as="CHANGES" name="doc/Horde/Template/CHANGES" />
    <install as="Horde/Template.php" name="lib/Horde/Template.php" />
    <install as="LICENSE" name="LICENSE" />
    <install as="Horde/Template/AllTests.php" name="test/Horde/Template/AllTests.php" />
@@ -284,7 +292,7 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2017-10-20</date>
+   <date>2017-10-27</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
    </notes>
