--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "horde/horde-template",
+    "name": "horde/template",
     "description": "Horde Template System",
     "type": "library",
     "homepage": "https://pear.horde.org",
@@ -28,7 +28,7 @@
         "php": "^5.3 || ^7"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Test": "^2.1@stable"
+        "pear-pear.horde.org/Horde_Test": "^2.1"
     },
     "replace": {
         "pear-pear.horde.org/Horde_Template": "2.*",
