--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "horde/template",
-    "description": "Horde Template System",
+    "description": "Template library (deprecated)",
     "type": "library",
-    "homepage": "https://pear.horde.org",
+    "homepage": "https://www.horde.org/libraries/Horde_Template",
     "license": "LGPL-2.1",
     "authors": [
         {
@@ -17,7 +17,7 @@
         }
     ],
     "version": "2.0.4",
-    "time": "2016-02-02",
+    "time": "2017-11-14",
     "repositories": [
         {
             "type": "pear",
