--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "horde/template",
     "description": "Template library (deprecated)",
-    "type": "library",
+    "type": "horde-library",
     "homepage": "https://www.horde.org/libraries/Horde_Template",
     "license": "LGPL-2.1",
     "authors": [
@@ -16,27 +16,27 @@
             "role": "lead"
         }
     ],
-    "version": "2.0.4",
-    "time": "2017-11-11",
+    "version": "3.0.0alpha1",
+    "time": "2021-02-24",
     "repositories": [
         {
-            "type": "pear",
-            "url": "https://pear.horde.org"
+            "type": "composer",
+            "url": "https://horde-satis.maintaina.com/"
         }
     ],
     "require": {
+        "horde/horde-installer-plugin": "*",
         "php": "^5.3 || ^7"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Test": "^2.1"
-    },
-    "replace": {
-        "pear-pear.horde.org/Horde_Template": "2.*",
-        "pear-horde/Horde_Template": "2.*"
+        "horde/test": "^2.1"
     },
     "autoload": {
         "psr-0": {
             "Horde_Template": "lib/"
+        },
+        "psr-4": {
+            "Horde\\Template\\": "src/"
         }
     }
 }
