--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "minimum-stability": "dev",
     "name": "horde/template",
     "description": "Template library (deprecated)",
     "type": "library",
